Updated project with latest changes