@@ -17,37 +17,34 @@ public class CorsConfig {
     @Value("${app.cors.allowed-origins:https://rbu-smart-canteen.netlify.app}")
     private String allowedOrigins;
 
-    // e.g. "https://*.netlify.app"
     @Value("${app.cors.allowed-origin-patterns:}")
     private String allowedOriginPatterns;
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration cfg = new CorsConfiguration();
+        CorsConfiguration configuration = new CorsConfiguration();
 
         List<String> origins = Arrays.stream(allowedOrigins.split(","))
-                .map(String::trim).filter(s -> !s.isEmpty()).collect(Collectors.toList());
-        List<String> patterns = Arrays.stream(allowedOriginPatterns.split(","))
-                .map(String::trim).filter(s -> !s.isEmpty()).collect(Collectors.toList());
+                .map(String::trim)
+                .filter(s -> !s.isEmpty())
+                .collect(Collectors.toList());
 
-        // Use exact origins if provided
-        if (!origins.isEmpty()) {
-            cfg.setAllowedOrigins(origins);
-        }
-        // And optionally allow wildcard patterns (for Netlify previews, etc.)
-        if (!patterns.isEmpty()) {
-            cfg.setAllowedOriginPatterns(patterns);
-        }
+        List<String> originPatterns = Arrays.stream(allowedOriginPatterns.split(","))
+                .map(String::trim)
+                .filter(s -> !s.isEmpty())
+                .collect(Collectors.toList());
 
-        // Let the browser negotiate whatever it needs for preflight
-        cfg.setAllowedMethods(List.of("*"));            // allow GET/POST/PUT/PATCH/DELETE/OPTIONS
-        cfg.setAllowedHeaders(List.of("*"));            // allow all requested headers
-        cfg.setExposedHeaders(List.of("Authorization","Content-Disposition"));
-        cfg.setAllowCredentials(false);                 // keep false if you use Bearer tokens (no cookies)
-        cfg.setMaxAge(3600L);
+        configuration.setAllowedOrigins(origins);
+        if (!originPatterns.isEmpty()) {
+            configuration.setAllowedOriginPatterns(originPatterns);
+        }
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With", "Accept"));
+        configuration.setAllowCredentials(false);
+        configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", cfg);
+        source.registerCorsConfiguration("/**", configuration);
         return source;
     }
 }
